# arkanoid

./: .clang-format  .clang-tidy  .gitignore  Ball.cpp  Ball.hpp  BallAllBreaking.hpp  BallBullet.hpp  BallFast.hpp  BallMovement.hpp  BallNormal.hpp  BallNull.hpp  BallPowerUp.hpp  BallSlow.hpp  BallState.hpp  BallSticky.hpp  BallWeird.hpp  Block.cpp  Block.hpp  CMakeLists.txt  CursesEventHandlerImp.hpp  Entity.cpp  Entity.hpp  Event.hpp  EventHandler.hpp  EventHandlerImp.hpp  Makefile  Map.cpp  Map.hpp  MapDrawing.hpp  Paddle.cpp  Paddle.hpp  PaddleBarrier.hpp  PaddleNormal.hpp  PaddlePowerUp.hpp  PaddleShooter.hpp  PaddleState.hpp  Point.hpp  PowerUp.hpp  PowerUpFactory.hpp  PowerUpMovement.hpp  (+4 more)
include/: ball.hpp  ball_allbreaking.hpp  ball_bullet.hpp  ball_fast.hpp  ball_movement.hpp  ball_normal.hpp  ball_power.hpp  ball_slow.hpp  ball_state.hpp  ball_sticky.hpp  ball_weird.hpp  block.hpp  curses_event_handler.hpp  entity.hpp  event.hpp  event_handler.hpp  game_manager.hpp  map.hpp  map_drawing.hpp  paddle.hpp  paddle_barrier.hpp  paddle_normal.hpp  paddle_power.hpp  paddle_shooter.hpp  paddle_state.hpp  point.hpp  power.hpp  power_factory.hpp  power_movement.hpp  system.hpp  system_clock.hpp  unbreakable_block.hpp  windows_event_handler.hpp
include/ball/: ball.hpp  ball_allbreaking.hpp  ball_bullet.hpp  ball_fast.hpp  ball_normal.hpp  ball_power.hpp  ball_slow.hpp  ball_state.hpp  ball_weird.hpp
include/drawing/: drawer.hpp
include/events/: curses_event_handler.hpp  event.hpp  event_handler.hpp  event_handler_imp.hpp  windows_event_handler.hpp
include/paddle/: paddle.hpp  paddle_barrier.hpp  paddle_normal.hpp  paddle_power.hpp  paddle_shooter.hpp  paddle_state.hpp  paddle_sticky.hpp
include/power/: power.hpp  power_factory.hpp
levels/: level1.txt
src/: CMakeLists.txt  ball.cpp  ball_allbreaking.hpp  ball_bullet.hpp  ball_fast.hpp  ball_movement.hpp  ball_normal.hpp  ball_power.hpp  ball_slow.hpp  ball_state.hpp  ball_sticky.hpp  ball_weird.hpp  block.cpp  curses_event_handler.hpp  entity.cpp  event_handler.hpp  main.cpp  map.cpp  map.hpp  map_drawing.hpp  paddle.cpp  paddle.hpp  paddle_barrier.hpp  paddle_normal.hpp  paddle_power.hpp  paddle_shooter.hpp  paddle_state.hpp  power_factory.hpp  power_movement.hpp  windows_event_handler.hpp
